{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 64,
  "lineage": "5ecaba49-599d-9278-d6c6-3ec809dae24d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-03870329faf3de94e",
            "domain": "vpc",
            "id": "eipalloc-09a6b8e29b776083e",
            "instance": "i-0d05ae3b5e5b29a4f",
            "network_border_group": "us-east-2",
            "network_interface": "eni-03d7bdf11e4e403c3",
            "private_dns": "ip-10-0-1-50.us-east-2.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-3-20-58-57.us-east-2.compute.amazonaws.com",
            "public_ip": "3.20.58.57",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.fuzzyblog-gw",
            "aws_network_interface.prod",
            "aws_security_group.allow_web",
            "aws_subnet.fuzzyblog-subnet",
            "aws_vpc.fuzzyblog-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "fuzzyblog-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a91cd140a1fc148a",
            "arn": "arn:aws:ec2:us-east-2:204677137788:instance/i-0d05ae3b5e5b29a4f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d05ae3b5e5b29a4f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-rails-access-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-03d7bdf11e4e403c3"
              }
            ],
            "primary_network_interface_id": "eni-03d7bdf11e4e403c3",
            "private_dns": "ip-10-0-1-50.us-east-2.compute.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "3.20.58.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a783380743c46eb9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d5e792b2297ca3e4",
            "tags": {
              "Name": "FuzzyBlog",
              "Owner": "Chris Johnston"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-045a4c0dfd4872e5c"
            ]
          },
          "dependencies": [
            "aws_network_interface.prod",
            "aws_security_group.allow_web",
            "aws_subnet.fuzzyblog-subnet",
            "aws_vpc.fuzzyblog-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "fuzzyblog-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:204677137788:internet-gateway/igw-013b74a9acbd252c2",
            "id": "igw-013b74a9acbd252c2",
            "owner_id": "204677137788",
            "vpc_id": "vpc-00bdcd92d472f605e"
          },
          "dependencies": [
            "aws_vpc.fuzzyblog-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0001ac9bf455c1924",
                "device_index": 0,
                "instance": "i-0d05ae3b5e5b29a4f"
              }
            ],
            "id": "eni-03d7bdf11e4e403c3",
            "ipv6_address_count": 0,
            "mac_address": "02:df:19:21:d9:e0",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-045a4c0dfd4872e5c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d5e792b2297ca3e4"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.fuzzyblog-subnet",
            "aws_vpc.fuzzyblog-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fuzzyblog-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0768af6ab5f72de58",
            "owner_id": "204677137788",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-013b74a9acbd252c2",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-013b74a9acbd252c2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fuzzyblog-prod"
            },
            "vpc_id": "vpc-00bdcd92d472f605e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.fuzzyblog-gw",
            "aws_vpc.fuzzyblog-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "fuzzyblog-rta-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0939b1c63437b36c4",
            "route_table_id": "rtb-0768af6ab5f72de58",
            "subnet_id": "subnet-0d5e792b2297ca3e4"
          },
          "dependencies": [
            "aws_internet_gateway.fuzzyblog-gw",
            "aws_route_table.fuzzyblog-rt",
            "aws_subnet.fuzzyblog-subnet",
            "aws_vpc.fuzzyblog-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:204677137788:security-group/sg-045a4c0dfd4872e5c",
            "description": "Allow Web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-045a4c0dfd4872e5c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web",
            "name_prefix": "",
            "owner_id": "204677137788",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-00bdcd92d472f605e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fuzzyblog-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fuzzyblog-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:204677137788:subnet/subnet-0d5e792b2297ca3e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d5e792b2297ca3e4",
            "map_public_ip_on_launch": false,
            "owner_id": "204677137788",
            "tags": {
              "Name": "fuzzyblog-prod-subnet"
            },
            "vpc_id": "vpc-00bdcd92d472f605e"
          },
          "dependencies": [
            "aws_vpc.fuzzyblog-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "fuzzyblog-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:204677137788:vpc/vpc-00bdcd92d472f605e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b072d35006e912d5",
            "default_route_table_id": "rtb-0a33d75b1ad209c5f",
            "default_security_group_id": "sg-02ee908b28e289851",
            "dhcp_options_id": "dopt-1e38a775",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00bdcd92d472f605e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a33d75b1ad209c5f",
            "owner_id": "204677137788",
            "tags": {
              "Name": "fuzzyblog-prod-vpc"
            }
          }
        }
      ]
    }
  ]
}